--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,6 @@ $RECYCLE.BIN/
 */build/*
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
+
+# SAM build folder
+.aws-sam/
